<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity"
    android:background="@color/app_color_light"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/main_activity_input_part">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/text_edit_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/input_text"
            android:textColorHint="@color/text_color_light"
            app:helperTextTextColor="#FF0000"
            app:endIconMode="clear_text"
            app:endIconTint="@color/text_color_light"
            app:boxStrokeColor="@color/text_color_light">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color_light"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/pattern_edit_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/input_pattern"
            android:textColorHint="@color/text_color_light"
            app:helperTextTextColor="#FF0000"
            app:endIconMode="clear_text"
            app:endIconTint="@color/text_color_light"
            app:boxStrokeColor="@color/text_color_light">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pattern_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color_light"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textColor="@color/text_color_light"
            android:textSize="20sp"
            android:textStyle="bold"
            android:padding="10dp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:gravity="center">
        </Button>
    </LinearLayout>

    <Button
        android:id="@+id/algorithm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/algorithm"
        android:textAllCaps="false"
        android:textColor="@color/text_color_light"
        android:textSize="12sp"
        android:textStyle="normal"
        android:layout_margin="10dp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:gravity="center">
    </Button>

    <TextView
        android:id="@+id/counter_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/text_color_dark"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="10dp">
    </TextView>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/image"
            android:scaleType="fitCenter"
            android:contentDescription="@string/image">
        </ImageView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/result_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>
</LinearLayout>